--- a/package.json
+++ b/package.json
@@ -160,7 +160,6 @@
   },
   "dependencies": {
     "geolib": "3.3.3",
-    "invariant": "^2.2.4",
-    "react-native-svg": "13.6.0"
+    "invariant": "^2.2.4"
   }
 }
