--- a/package.json
+++ b/package.json
@@ -161,5 +161,8 @@
   "dependencies": {
     "geolib": "3.3.3",
     "invariant": "^2.2.4"
+  },
+  "peerDependencies": {
+    "react-native-svg": "^13.6.0",
   }
 }
